--- a/src/PrepareTrainData.ipynb
+++ b/src/PrepareTrainData.ipynb
@@ -28,9 +28,10 @@
     "from pytz import utc\n",
     "\n",
     "\n",
-    "CONSUMPTION_DATA_PATH = Path(\"../data/\")\n",
+    "CONSUMPTION_DATA_PATH = Path(\"../data/consumption\")\n",
     "CONSUMPTION_NE5_FILE = CONSUMPTION_DATA_PATH / \"NE5_Export.csv\"\n",
     "CONSUMPTION_NE7_FILE = CONSUMPTION_DATA_PATH / \"NE7_Export.csv\"\n",
+    "TRAIN_DATA_PATH = Path('../data/consumption/final_train.parquet')\n",
     "\n",
     "METEO_PATH = Path(\"/meteoswiss/\")\n",
     "METEO_STATION = \"REH\"\n",
@@ -80,7 +81,12 @@
     "                         .agg(f.avg(f.col(\"Value\")).alias(\"Temperature\"))\n",
     "            )\n",
     "\"\"\"\n",
-    "# ToDo"
+    "\n",
+    "# Prüfen!\n",
+    "meteoData = pd.read_fwf(METEO_PATH, skiprows=9, encoding='iso-8859-1')\n",
+    "meteoData = meteoData[meteoData.Station == METEO_STATION]\n",
+    "meteoData['date'] = pd.to_datetime(meteoData['TimestampUtc'])\n",
+    "meteoData = meteoData.groupby('Date').agg(Value = (METEO_TEMP_PARAMETER, 'mean')) # Check\n"
    ]
   },
   {
@@ -98,7 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.write.parquet(\"/ConsumptionModel/Data/final_train.parquet\")"
+    "# data.write.parquet(\"/ConsumptionModel/Data/final_train.parquet\")\n",
+    "data.to_parquet(TRAIN_DATA_PATH)"
    ]
   }
  ],
