--- a/src/PrepareTrainData.ipynb
+++ b/src/PrepareTrainData.ipynb
@@ -16,24 +16,22 @@
     "from datetime import datetime, timezone\n",
     "from datetime import timedelta\n",
     "from pathlib import Path\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pyarrow as pa"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pytz import utc\n",
-    "\n",
-    "\n",
     "CONSUMPTION_DATA_PATH = Path(\"../data/consumption\")\n",
     "CONSUMPTION_NE5_FILE = CONSUMPTION_DATA_PATH / \"NE5_Export.csv\"\n",
     "CONSUMPTION_NE7_FILE = CONSUMPTION_DATA_PATH / \"NE7_Export.csv\"\n",
     "TRAIN_DATA_PATH = Path('../data/consumption/final_train.parquet')\n",
     "\n",
-    "METEO_PATH = Path(\"/meteoswiss/\")\n",
+    "METEO_PATH = Path(\"../data/meteoswiss/reh_nzz.csv\")\n",
     "METEO_STATION = \"REH\"\n",
     "METEO_TEMP_PARAMETER = \"tre200h0\"\n",
     "\n",
@@ -45,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,13 +60,15 @@
     "#               )\n",
     "\n",
     "consumption = pd.read_csv('https://data.stadt-zuerich.ch/dataset/ewz_stromabgabe_netzebenen_stadt_zuerich/download/ewz_stromabgabe_netzebenen_stadt_zuerich.csv')\n",
-    "consumption['Timestamp'] = pd.to_datetime(consumption['Timestamp'], errors='raise', utc=True)\n",
-    "consumption = consumption[(consumption.Timestamp >= START_DATE) & (consumption.Timestamp < END_DATE)]\n"
+    "consumption['Date'] = pd.to_datetime(consumption['Timestamp'], errors='raise', utc=True)\n",
+    "consumption = consumption[(consumption.Date >= START_DATE) & (consumption.Date < END_DATE)]\n",
+    "consumption.rename(columns={'Value_NE5': 'NE5Consumption', 'Value_NE7': 'NE7Consumption'}, inplace=True)\n",
+    "consumption = consumption.groupby(consumption.Date.dt.date).sum(numeric_only=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,36 +82,42 @@
     "            )\n",
     "\"\"\"\n",
     "\n",
-    "# Prüfen!\n",
-    "meteoData = pd.read_fwf(METEO_PATH, skiprows=9, encoding='iso-8859-1')\n",
-    "meteoData = meteoData[meteoData.Station == METEO_STATION]\n",
-    "meteoData['date'] = pd.to_datetime(meteoData['TimestampUtc'])\n",
-    "meteoData = meteoData.groupby('Date').agg(Value = (METEO_TEMP_PARAMETER, 'mean')) # Check\n"
+    "meteoData = pd.read_csv(METEO_PATH, encoding='iso-8859-1', sep=';')\n",
+    "meteoData = meteoData[meteoData.abbr == METEO_STATION]\n",
+    "meteoData['Date'] = pd.to_datetime(meteoData['time'], format='%Y%m%d%H%M')\n",
+    "meteoData = meteoData.groupby(meteoData.Date.dt.date).agg(Temperature = (METEO_TEMP_PARAMETER, 'mean'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = consumption.join(meteoData, \"Date\")"
+    "data = consumption.join(meteoData, \"Date\").reset_index(drop=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# data.write.parquet(\"/ConsumptionModel/Data/final_train.parquet\")\n",
-    "data.to_parquet(TRAIN_DATA_PATH)"
+    "data.to_parquet(TRAIN_DATA_PATH, engine='pyarrow')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('env': venv)",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -125,12 +131,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "68c884652952f7983733a5c5d33718639627b23ce073ad2f3e653c062f4e90d0"
+    "hash": "a78666ffa58b7f1ff5178c9bd3a68cf56dd55e27c6383ab5473ef63feffae26e"
    }
   }
  },
