--- a/src/PrepareTrainData.ipynb
+++ b/src/PrepareTrainData.ipynb
@@ -46,7 +46,82 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NE5Consumption</th>\n",
+       "      <th>NE7Consumption</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-10-28</th>\n",
+       "      <td>2.485206e+06</td>\n",
+       "      <td>4.965997e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-29</th>\n",
+       "      <td>2.072831e+06</td>\n",
+       "      <td>4.298467e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-30</th>\n",
+       "      <td>1.995849e+06</td>\n",
+       "      <td>4.206186e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-31</th>\n",
+       "      <td>2.466076e+06</td>\n",
+       "      <td>4.864538e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-01</th>\n",
+       "      <td>2.168559e+04</td>\n",
+       "      <td>3.548607e+04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            NE5Consumption  NE7Consumption\n",
+       "Date                                      \n",
+       "2022-10-28    2.485206e+06    4.965997e+06\n",
+       "2022-10-29    2.072831e+06    4.298467e+06\n",
+       "2022-10-30    1.995849e+06    4.206186e+06\n",
+       "2022-10-31    2.466076e+06    4.864538e+06\n",
+       "2022-11-01    2.168559e+04    3.548607e+04"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#ne5File = spark.read.csv(CONSUMPTION_NE5_FILE, header=True, inferSchema=True, sep=\";\")\n",
     "#ne7File = spark.read.csv(CONSUMPTION_NE7_FILE, header=True, inferSchema=True, sep=\";\")\n",
@@ -62,14 +137,23 @@
     "\n",
     "consumption = pd.read_csv('https://data.stadt-zuerich.ch/dataset/ewz_stromabgabe_netzebenen_stadt_zuerich/download/ewz_stromabgabe_netzebenen_stadt_zuerich.csv')\n",
     "consumption['Date'] = pd.to_datetime(consumption['Timestamp'], errors='raise', utc=True)\n",
-    "#consumption = consumption[(consumption.Date >= START_DATE) & (consumption.Date < END_DATE)]\n",
+    "consumption['Date'] = consumption['Date'].dt.tz_convert('Europe/Berlin')\n",
     "consumption.rename(columns={'Value_NE5': 'NE5Consumption', 'Value_NE7': 'NE7Consumption'}, inplace=True)\n",
-    "consumption = consumption.groupby(consumption.Date.dt.date).sum(numeric_only=True)"
+    "consumption = consumption.groupby(consumption.Date.dt.date).sum(numeric_only=True)\n",
+    "\n",
+    "consumption.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Station REH"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,24 +186,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>2022-10-27</th>\n",
+       "      <td>12.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2022-10-28</th>\n",
-       "      <td>12.520833</td>\n",
+       "      <td>12.583333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-10-29</th>\n",
-       "      <td>13.154167</td>\n",
+       "      <td>13.066667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-10-30</th>\n",
-       "      <td>11.292000</td>\n",
+       "      <td>11.270833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-10-31</th>\n",
-       "      <td>10.362500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-11-01</th>\n",
-       "      <td>9.200000</td>\n",
+       "      <td>10.400000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -128,14 +212,14 @@
       "text/plain": [
        "            Temperature\n",
        "Date                   \n",
-       "2022-10-28    12.520833\n",
-       "2022-10-29    13.154167\n",
-       "2022-10-30    11.292000\n",
-       "2022-10-31    10.362500\n",
-       "2022-11-01     9.200000"
+       "2022-10-27    12.500000\n",
+       "2022-10-28    12.583333\n",
+       "2022-10-29    13.066667\n",
+       "2022-10-30    11.270833\n",
+       "2022-10-31    10.400000"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,11 +240,58 @@
     "meteoData['Date'] = pd.to_datetime(meteoData['time'], format='%Y%m%d%H%M', utc=True)\n",
     "\n",
     "# Convert Timezone!\n",
-    "meteoData['Date'] = meteoData['Date'].dt.tz_convert('Europe/Berlin')\n",
+    "#meteoData['Date'] = meteoData['Date'].dt.tz_convert('Europe/Berlin')\n",
     "\n",
     "meteoData = meteoData.groupby(meteoData.Date.dt.date).agg(Temperature = (METEO_TEMP_PARAMETER, 'mean'))\n",
     "\n",
     "meteoData.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Station SMA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nmeteoData = pd.concat([\\n    pd.read_csv('https://data.geo.admin.ch/ch.meteoschweiz.klima/nbcn-tageswerte/nbcn-daily_SMA_previous.csv', encoding='utf-8', sep=';'),\\n    pd.read_csv('https://data.geo.admin.ch/ch.meteoschweiz.klima/nbcn-tageswerte/nbcn-daily_SMA_current.csv', encoding='utf-8', sep=';')\\n])\\nmeteoData['Date'] = pd.to_datetime(meteoData['date'], format='%Y%m%d')\\nmeteoData['Date'] = meteoData['Date'].dt.date\\nmeteoData = meteoData[meteoData.Date >= date(2009, 1, 1)]\\nmeteoData.rename(columns={'tre200d0': 'Temperature'}, inplace=True)\\nmeteoData = meteoData[['Date', 'Temperature']]\\nmeteoData = meteoData.set_index('Date')\\n\\nmeteoData.head()\\n\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "meteoData = pd.concat([\n",
+    "    pd.read_csv('https://data.geo.admin.ch/ch.meteoschweiz.klima/nbcn-tageswerte/nbcn-daily_SMA_previous.csv', encoding='utf-8', sep=';'),\n",
+    "    pd.read_csv('https://data.geo.admin.ch/ch.meteoschweiz.klima/nbcn-tageswerte/nbcn-daily_SMA_current.csv', encoding='utf-8', sep=';')\n",
+    "])\n",
+    "meteoData['Date'] = pd.to_datetime(meteoData['date'], format='%Y%m%d')\n",
+    "meteoData['Date'] = meteoData['Date'].dt.date\n",
+    "meteoData = meteoData[meteoData.Date >= date(2009, 1, 1)]\n",
+    "meteoData.rename(columns={'tre200d0': 'Temperature'}, inplace=True)\n",
+    "meteoData = meteoData[['Date', 'Temperature']]\n",
+    "meteoData = meteoData.set_index('Date')\n",
+    "\n",
+    "meteoData.head()\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export"
    ]
   },
   {
@@ -169,22 +300,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "data = consumption.join(meteoData, \"Date\").reset_index(drop=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,147 +314,6 @@
     "\n",
     "# 2022\n",
     "data[(data.Date >= date(2022, 1, 1)) & (data.Date < date(2022, 10, 31))].to_parquet(DATA_PATH_2022, engine='pyarrow')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>NE5Consumption</th>\n",
-       "      <th>NE7Consumption</th>\n",
-       "      <th>Temperature</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2010-01-01</td>\n",
-       "      <td>1.822814e+06</td>\n",
-       "      <td>5.115723e+06</td>\n",
-       "      <td>2.691667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2010-01-02</td>\n",
-       "      <td>1.865160e+06</td>\n",
-       "      <td>5.371369e+06</td>\n",
-       "      <td>-2.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2010-01-03</td>\n",
-       "      <td>1.789316e+06</td>\n",
-       "      <td>5.203847e+06</td>\n",
-       "      <td>-4.887500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2010-01-04</td>\n",
-       "      <td>2.541962e+06</td>\n",
-       "      <td>6.682725e+06</td>\n",
-       "      <td>-6.745833</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2010-01-05</td>\n",
-       "      <td>2.617126e+06</td>\n",
-       "      <td>6.872159e+06</td>\n",
-       "      <td>-5.587500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4379</th>\n",
-       "      <td>2021-12-27</td>\n",
-       "      <td>2.462366e+06</td>\n",
-       "      <td>4.957839e+06</td>\n",
-       "      <td>5.387500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4380</th>\n",
-       "      <td>2021-12-28</td>\n",
-       "      <td>2.455435e+06</td>\n",
-       "      <td>5.057680e+06</td>\n",
-       "      <td>7.383333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4381</th>\n",
-       "      <td>2021-12-29</td>\n",
-       "      <td>2.441716e+06</td>\n",
-       "      <td>5.077009e+06</td>\n",
-       "      <td>8.375000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4382</th>\n",
-       "      <td>2021-12-30</td>\n",
-       "      <td>2.397142e+06</td>\n",
-       "      <td>4.920351e+06</td>\n",
-       "      <td>12.316667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4383</th>\n",
-       "      <td>2021-12-31</td>\n",
-       "      <td>2.297156e+06</td>\n",
-       "      <td>4.786827e+06</td>\n",
-       "      <td>8.558333</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4383 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Date  NE5Consumption  NE7Consumption  Temperature\n",
-       "1     2010-01-01    1.822814e+06    5.115723e+06     2.691667\n",
-       "2     2010-01-02    1.865160e+06    5.371369e+06    -2.000000\n",
-       "3     2010-01-03    1.789316e+06    5.203847e+06    -4.887500\n",
-       "4     2010-01-04    2.541962e+06    6.682725e+06    -6.745833\n",
-       "5     2010-01-05    2.617126e+06    6.872159e+06    -5.587500\n",
-       "...          ...             ...             ...          ...\n",
-       "4379  2021-12-27    2.462366e+06    4.957839e+06     5.387500\n",
-       "4380  2021-12-28    2.455435e+06    5.057680e+06     7.383333\n",
-       "4381  2021-12-29    2.441716e+06    5.077009e+06     8.375000\n",
-       "4382  2021-12-30    2.397142e+06    4.920351e+06    12.316667\n",
-       "4383  2021-12-31    2.297156e+06    4.786827e+06     8.558333\n",
-       "\n",
-       "[4383 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[(data.Date >= START_DATE) & (data.Date < END_DATE)]"
    ]
   },
   {
