--- a/src/TrainFinalModel.ipynb
+++ b/src/TrainFinalModel.ipynb
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Some stats..."
+    "### Some stats..."
    ]
   },
   {
