--- a/src/PrepareTrainData.ipynb
+++ b/src/PrepareTrainData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Energy Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,29 +86,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2022-10-29</th>\n",
-       "      <td>2.072831e+06</td>\n",
-       "      <td>4.298467e+06</td>\n",
+       "      <th>2022-11-05</th>\n",
+       "      <td>2.131121e+06</td>\n",
+       "      <td>4.586135e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-10-30</th>\n",
-       "      <td>1.995849e+06</td>\n",
-       "      <td>4.206186e+06</td>\n",
+       "      <th>2022-11-06</th>\n",
+       "      <td>1.931725e+06</td>\n",
+       "      <td>4.349917e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-10-31</th>\n",
-       "      <td>2.466076e+06</td>\n",
-       "      <td>4.864538e+06</td>\n",
+       "      <th>2022-11-07</th>\n",
+       "      <td>2.468672e+06</td>\n",
+       "      <td>5.016497e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-11-01</th>\n",
-       "      <td>2.491564e+06</td>\n",
-       "      <td>5.000871e+06</td>\n",
+       "      <th>2022-11-08</th>\n",
+       "      <td>2.546318e+06</td>\n",
+       "      <td>5.185552e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-11-02</th>\n",
-       "      <td>2.149638e+04</td>\n",
-       "      <td>3.566598e+04</td>\n",
+       "      <th>2022-11-09</th>\n",
+       "      <td>2.212771e+04</td>\n",
+       "      <td>3.813872e+04</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -110,37 +117,24 @@
       "text/plain": [
        "            NE5Consumption  NE7Consumption\n",
        "Date                                      \n",
-       "2022-10-29    2.072831e+06    4.298467e+06\n",
-       "2022-10-30    1.995849e+06    4.206186e+06\n",
-       "2022-10-31    2.466076e+06    4.864538e+06\n",
-       "2022-11-01    2.491564e+06    5.000871e+06\n",
-       "2022-11-02    2.149638e+04    3.566598e+04"
+       "2022-11-05    2.131121e+06    4.586135e+06\n",
+       "2022-11-06    1.931725e+06    4.349917e+06\n",
+       "2022-11-07    2.468672e+06    5.016497e+06\n",
+       "2022-11-08    2.546318e+06    5.185552e+06\n",
+       "2022-11-09    2.212771e+04    3.813872e+04"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#ne5File = spark.read.csv(CONSUMPTION_NE5_FILE, header=True, inferSchema=True, sep=\";\")\n",
-    "#ne7File = spark.read.csv(CONSUMPTION_NE7_FILE, header=True, inferSchema=True, sep=\";\")\n",
-    "\n",
-    "# consumption = (ne5File.alias(\"ne5\")\n",
-    "#                       .join(ne7File.alias(\"ne7\"), \"Date\")\n",
-    "#                       .withColumn(\"NE5Consumption\", f.expr(\"ne5.Value\"))\n",
-    "#                       .withColumn(\"NE7Consumption\", f.expr(\"ne7.Value\"))\n",
-    "#                       .withColumn(\"Date\", f.to_date(f.col(\"Date\"), TIME_FORMAT))\n",
-    "#                       .filter((f.col(\"Date\") >= START_DATE) & (f.col(\"Date\") < END_DATE))\n",
-    "#                       .select(\"Date\", \"NE5Consumption\", \"NE7Consumption\")\n",
-    "#               )\n",
-    "\n",
     "consumption = pd.read_csv('https://data.stadt-zuerich.ch/dataset/ewz_stromabgabe_netzebenen_stadt_zuerich/download/ewz_stromabgabe_netzebenen_stadt_zuerich.csv')\n",
     "consumption['Date'] = pd.to_datetime(consumption['Timestamp'], errors='raise', utc=True)\n",
     "consumption['Date'] = consumption['Date'].dt.tz_convert('Europe/Berlin')\n",
     "consumption.rename(columns={'Value_NE5': 'NE5Consumption', 'Value_NE7': 'NE7Consumption'}, inplace=True)\n",
     "consumption = consumption.groupby(consumption.Date.dt.date).sum(numeric_only=True)\n",
-    "\n",
     "consumption.tail()"
    ]
   },
@@ -153,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -219,22 +213,12 @@
        "2022-10-31    10.400000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "meteoData = (spark.read.format(\"delta\")\n",
-    "                         .load(\"/MeteoSwiss/Measurement/Delta\")\n",
-    "                         .filter((f.col(\"Station\") == METEO_STATION) & (f.col(\"Parameter\") == METEO_TEMP_PARAMETER))\n",
-    "                         .withColumn(\"Date\", f.to_date(f.col(\"TimestampUtc\")))\n",
-    "                         .groupBy(\"Date\")\n",
-    "                         .agg(f.avg(f.col(\"Value\")).alias(\"Temperature\"))\n",
-    "            )\n",
-    "\"\"\"\n",
-    "\n",
     "meteoData = pd.read_csv(METEO_PATH, encoding='iso-8859-1', sep=';')\n",
     "meteoData = meteoData[meteoData.abbr == METEO_STATION]\n",
     "meteoData['Date'] = pd.to_datetime(meteoData['time'], format='%Y%m%d%H%M', utc=True)\n",
@@ -251,7 +235,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Station SMA"
+    "### Station SMA\n",
+    "Data for station REH (Zürich-Affoltern) is not open source. If you dont have it, you can use SMA (Zürich-Fluntern)"
    ]
   },
   {
@@ -283,7 +268,7 @@
     "meteoData = meteoData[['Date', 'Temperature']]\n",
     "meteoData = meteoData.set_index('Date')\n",
     "\n",
-    "meteoData.head()\n",
+    "meteoData.tail()\n",
     "\"\"\""
    ]
   },
@@ -296,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,23 +290,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data.write.parquet(\"/ConsumptionModel/Data/final_train.parquet\")\n",
+    "# Trainingset\n",
     "data[(data.Date >= START_DATE) & (data.Date < END_DATE)].to_parquet(TRAIN_DATA_PATH, engine='pyarrow')\n",
     "\n",
     "# 2022\n",
     "data[(data.Date >= date(2021, 12, 26)) & (data.Date < date(2022, 10, 31))].to_parquet(DATA_PATH_2022, engine='pyarrow')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
