--- a/src/TrainFinalModel.ipynb
+++ b/src/TrainFinalModel.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,122 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Prepare Data"
+    "### Prepare Data\n",
+    "* y = Energy Consumption Netzebene 5 & 7 (`NE5`, `NE7`)\n",
+    "* Regressors: `CosYearTemp` & `SinYearTemp`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ds</th>\n",
+       "      <th>CosYearTemp</th>\n",
+       "      <th>NE5Consumption</th>\n",
+       "      <th>NE7Consumption</th>\n",
+       "      <th>SinYearTemp</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4378</th>\n",
+       "      <td>2021-12-27</td>\n",
+       "      <td>2.820697</td>\n",
+       "      <td>2.444119e+06</td>\n",
+       "      <td>5.135075e+06</td>\n",
+       "      <td>-0.248734</td>\n",
+       "      <td>2.831548</td>\n",
+       "      <td>7.579194e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4379</th>\n",
+       "      <td>2021-12-28</td>\n",
+       "      <td>3.958501</td>\n",
+       "      <td>2.404289e+06</td>\n",
+       "      <td>5.030473e+06</td>\n",
+       "      <td>-0.317863</td>\n",
+       "      <td>3.972024</td>\n",
+       "      <td>7.434763e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4380</th>\n",
+       "      <td>2021-12-29</td>\n",
+       "      <td>5.408283</td>\n",
+       "      <td>2.358133e+06</td>\n",
+       "      <td>4.932551e+06</td>\n",
+       "      <td>-0.398725</td>\n",
+       "      <td>5.425595</td>\n",
+       "      <td>7.290684e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4381</th>\n",
+       "      <td>2021-12-30</td>\n",
+       "      <td>6.992434</td>\n",
+       "      <td>2.321458e+06</td>\n",
+       "      <td>4.843913e+06</td>\n",
+       "      <td>-0.404744</td>\n",
+       "      <td>7.008333</td>\n",
+       "      <td>7.165370e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4382</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>7.580403</td>\n",
+       "      <td>2.311679e+06</td>\n",
+       "      <td>4.809497e+06</td>\n",
+       "      <td>-0.327896</td>\n",
+       "      <td>7.591667</td>\n",
+       "      <td>7.121177e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             ds  CosYearTemp  NE5Consumption  NE7Consumption  SinYearTemp  \\\n",
+       "4378 2021-12-27     2.820697    2.444119e+06    5.135075e+06    -0.248734   \n",
+       "4379 2021-12-28     3.958501    2.404289e+06    5.030473e+06    -0.317863   \n",
+       "4380 2021-12-29     5.408283    2.358133e+06    4.932551e+06    -0.398725   \n",
+       "4381 2021-12-30     6.992434    2.321458e+06    4.843913e+06    -0.404744   \n",
+       "4382 2021-12-31     7.580403    2.311679e+06    4.809497e+06    -0.327896   \n",
+       "\n",
+       "      Temperature             y  \n",
+       "4378     2.831548  7.579194e+06  \n",
+       "4379     3.972024  7.434763e+06  \n",
+       "4380     5.425595  7.290684e+06  \n",
+       "4381     7.008333  7.165370e+06  \n",
+       "4382     7.591667  7.121177e+06  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train = pd.read_parquet(TRAIN_DATA_PATH, engine='pyarrow')\n",
     "train['Date'] = pd.to_datetime(train['Date'])\n",
@@ -81,7 +189,8 @@
     "train['SinYearTemp'] = train.apply(lambda row: row['Temperature'] * math.sin(row['Date'].dayofyear * 2 * math.pi / 365), axis=1)\n",
     "train.rename(columns={'Date': 'ds'}, inplace=True)\n",
     "train = train.sort_values('ds')\n",
-    "train = train.rolling(window=ROLLING_WINDOW, on='ds').mean().dropna()[:-ROLLING_WINDOW]"
+    "train = train.rolling(window=ROLLING_WINDOW, on='ds').mean().dropna()#[:-ROLLING_WINDOW]\n",
+    "train.tail()"
    ]
   },
   {
