--- a/src/PrepareTrainData.ipynb
+++ b/src/PrepareTrainData.ipynb
@@ -16,8 +16,7 @@
     "from datetime import datetime, timezone, date\n",
     "from datetime import timedelta\n",
     "from pathlib import Path\n",
-    "import pandas as pd\n",
-    "import pyarrow as pa"
+    "import pandas as pd"
    ]
   },
   {
@@ -86,29 +85,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2022-11-05</th>\n",
-       "      <td>2.131121e+06</td>\n",
-       "      <td>4.586135e+06</td>\n",
+       "      <th>2022-12-08</th>\n",
+       "      <td>2.618021e+06</td>\n",
+       "      <td>5.651042e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-11-06</th>\n",
-       "      <td>1.931725e+06</td>\n",
-       "      <td>4.349917e+06</td>\n",
+       "      <th>2022-12-09</th>\n",
+       "      <td>2.620804e+06</td>\n",
+       "      <td>5.763255e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-11-07</th>\n",
-       "      <td>2.468672e+06</td>\n",
-       "      <td>5.016497e+06</td>\n",
+       "      <th>2022-12-10</th>\n",
+       "      <td>2.206686e+06</td>\n",
+       "      <td>5.216579e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-11-08</th>\n",
-       "      <td>2.546318e+06</td>\n",
-       "      <td>5.185552e+06</td>\n",
+       "      <th>2022-12-11</th>\n",
+       "      <td>2.104165e+06</td>\n",
+       "      <td>4.843438e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-11-09</th>\n",
-       "      <td>2.212771e+04</td>\n",
-       "      <td>3.813872e+04</td>\n",
+       "      <th>2022-12-12</th>\n",
+       "      <td>2.244387e+04</td>\n",
+       "      <td>4.246640e+04</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -117,11 +116,11 @@
       "text/plain": [
        "            NE5Consumption  NE7Consumption\n",
        "Date                                      \n",
-       "2022-11-05    2.131121e+06    4.586135e+06\n",
-       "2022-11-06    1.931725e+06    4.349917e+06\n",
-       "2022-11-07    2.468672e+06    5.016497e+06\n",
-       "2022-11-08    2.546318e+06    5.185552e+06\n",
-       "2022-11-09    2.212771e+04    3.813872e+04"
+       "2022-12-08    2.618021e+06    5.651042e+06\n",
+       "2022-12-09    2.620804e+06    5.763255e+06\n",
+       "2022-12-10    2.206686e+06    5.216579e+06\n",
+       "2022-12-11    2.104165e+06    4.843438e+06\n",
+       "2022-12-12    2.244387e+04    4.246640e+04"
       ]
      },
      "execution_count": 3,
@@ -241,20 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nmeteoData = pd.concat([\\n    pd.read_csv('https://data.geo.admin.ch/ch.meteoschweiz.klima/nbcn-tageswerte/nbcn-daily_SMA_previous.csv', encoding='utf-8', sep=';'),\\n    pd.read_csv('https://data.geo.admin.ch/ch.meteoschweiz.klima/nbcn-tageswerte/nbcn-daily_SMA_current.csv', encoding='utf-8', sep=';')\\n])\\nmeteoData['Date'] = pd.to_datetime(meteoData['date'], format='%Y%m%d')\\nmeteoData['Date'] = meteoData['Date'].dt.date\\nmeteoData = meteoData[meteoData.Date >= date(2009, 1, 1)]\\nmeteoData.rename(columns={'tre200d0': 'Temperature'}, inplace=True)\\nmeteoData = meteoData[['Date', 'Temperature']]\\nmeteoData = meteoData.set_index('Date')\\n\\nmeteoData.head()\\n\""
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "meteoData = pd.concat([\n",
@@ -281,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,8 +286,15 @@
     "data[(data.Date >= START_DATE) & (data.Date < END_DATE)].to_parquet(TRAIN_DATA_PATH, engine='pyarrow')\n",
     "\n",
     "# 2022\n",
-    "data[(data.Date >= date(2021, 12, 26)) & (data.Date < date(2022, 10, 31))].to_parquet(DATA_PATH_2022, engine='pyarrow')\n"
+    "data[(data.Date >= date(2021, 12, 26)) & (data.Date < date(2022, 10, 31))].to_parquet(DATA_PATH_2022, engine='pyarrow')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
